[package]
name = "rust-rrt-maturin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_rrt_maturin"
crate-type = ["cdylib"]

[dependencies]
ordered-float = "2.1.1"
num-traits = "0.2.14"
rand = "0.8.5"
pyo3 = "0.18.1"
