[package]
name = "rust-rrt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = true

[lib]
name = "rust_rrt"
crate-type = ["cdylib"]

[[bin]]
name = "rust_rrt_binati"
path = "src/main.rs"

[dependencies]
ordered-float = "2.1.1"
num-traits = "0.2.14"
rand = "0.8.5"